src/css/14-l.css
/**********************************************************************************
 * L sized screen - Small desktop or a laptop
 **********************************************************************************/
@media screen and (min-width: 64em) {
/*============== General ==============*/
	header {max-height: 167px;}

	.header-container {
		height: 131px;
	}

	.header-super-wrapper {
		display: flex;
	}

	.menu li > .menu-item {
		font-size: 1em;
	}

	.header-container .logo-text {
		font-size: 3.8em;
		height: 100px;
	}

	.header-button .fa-chevron-up,
	.header-button .fa-chevron-down {
		font-size: 0.5em;
	}

	#main-menu-button {
		display: none; /* No main menu button on large screens */
	}

	.menu-language-choice li > .menu-item, .menu-music li > .menu-item {display: block;}


/*============== Language Menu ==============*/
	.header-container .toggle-language-wrapper {
		align-items: flex-end;
	}

	.toggle-language-wrapper > .header-button {
		border-bottom: 0 none;
		border-radius: 4px;
		font-size: 1em;
		margin: 4px 6px;
		padding: 6px 8px;
	}

	.toggle-language-label {
		display: inline;
	}

	.language-choice-wrapper {
		display: block;
	}

	.menu-language-choice {
		display: inline-block;
		min-width: 300px;
	}


/*============== Main Menu ==============*/
	.menu-main-wrapper {
		display: flex;
		position: relative;
		top: -37px;
	}

	.menu-main {
		box-shadow: none;
		display: block;
		height: auto;
		min-width: 380px;
		overflow: initial; /* otherwise menu-music has no shadow */
		text-align: right;
		width: inherit;
	}

	.menu-main > ul, .menu-main > ul > li, .menu-main > ul > li > .menu-item {
		display: inline-block;
		text-align: initial;
	}

	.menu-main > ul {
		/* fix the 1px misalignment of the music menu */
		height: 36px;
		margin: 0 6px 1px 0;
		padding-bottom: 0;
	}

	.menu-main > ul > li {
		padding: 0;
	}

	.menu-main > ul > li > .menu-item {
		border-bottom: 0 none;
		border-radius: 4px;
		padding: 6px 8px;
	}

	/* expanded menus button spacing */
	.menu-main > ul > li > .menu-item .icon, .header-container .toggle-language-wrapper .icon {
		margin: 0 4px 0 2px;
	}


/*============== Music Menu ==============*/
	.menu-music > ul {
		display: flex;
		flex-flow: column;
		text-align: initial;
	}
	.menu-music li:first-child .menu-item {padding-top: 12px;}


/*============== Playlist Menu ==============*/
	.menu-playlist li > .menu-item,
	.menu-playlist-wrapper .playlist-search input {font-size: 0.9em;}


/*============== Content ==============*/
	.content-wrapper {
		min-height: calc(100vh - 167px - 2.5em - 2.5em); /* 100% - header-height - footer - player */
	}
	.content {
		font-size: 0.95em;
		padding: 0.7em 2.1em;
		width: 68em;
	}
	.content-404 {
		max-width: 68em;
		width: auto;
	}
	.content-discography .album-tracks .album-duration-container .album-duration-separator {
		padding: 8px 1px 0 0;
	}


/*============== Player ==============*/
	.player .track-title,
	.player .loading-indicator,
	.player .track-progress-bar-container {
		font-size: 0.9em;
	}
	.player .player-controls {font-size: 1.2em;}

	.player .track-title,
	.player .loading-indicator {
		flex: initial;
		width: 340px;
	}

	.player .time-balloon {
		bottom: 21px;
		position: fixed;
	}
	.player .time-balloon-time-wrapper {
		position: relative;
	}
	.player .time-balloon-time {
		font-size: 0.9em;
		padding: 3px 7px;
		position: relative;
		z-index: 10;
	}
	.player .time-balloon-pointer {
		height: 10px;
		margin: 0 auto;
		position: relative;
		top: -7px;
		transform: rotateZ(45deg);
		width: 10px;
	}

	.player .track-progress-bar-container {
		align-items: center;
		flex: auto;
		width: 38%;
	}
	.player .track-progress-bar {
		border-radius: 0.5em;
		flex: auto;
		height: 1em;
		margin: 0 8px;
	}
	.player .track-progress-bar-background {
		height: 0.5em;
		margin-top: 0.25em;
	}
	.player .track-progress {
		height: 100%;
		width: 0;
	}

	.player .total-time::before {content: ""; margin: 0 auto;}

	.player .player-controls .player-button {width: 48px;}

/*============== Footer ==============*/
	footer .social-label {
		display: block;
		font-size: 0.85em;
		margin-left: 10px;
	}
	footer .social-icons a {font-size: 1.3em;}
	footer .copyright {
		font-size: 0.85em;
		margin-right: 10px;
	}

/*============== Pages ==============*/
	.lyrics-super-wrapper {
		display: flex;
		justify-content: center;
	}
	.content-lyrics .lyrics-wrapper {
		display: flex;
		flex-flow: column;
		text-align: left;
	}
	.content-lyrics .lyrics-wrapper .lyrics {white-space: nowrap;}
	.content-lyrics .english-translation-link {display: none;}
}

